# DQ_Cmake_SFML

./: CMakeLists.txt
resources/dejavu-sans-mono-font/: info.txt
src/: main_text_echo.cpp  main_text_editor.cpp
